--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ logging.level.root=ERROR
 logging.level.com.lulippe=INFO
 logging.level.springframework.boot.autoconfigure.postgresql=INFO
 logging.level.org.springframework.boot.web.tomcat=INFO
+
+# --- LIQUIBASE CONFIGURATION ---
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+spring.liquibase.default-schema=pay_my_buddy
+spring.liquibase.contexts=dev
