--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=payMyBuddy
 server.port=8080
+server.servlet.context-path=/
 
 spring.jpa.database=postgresql
 spring.sql.init.platform=postgres
 spring.jpa.show-sql=true
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
