feat(PMB7-PMB-8): create the registration page and allow new user to register

--- a/src/main/resources/openapi/pay-my-buddy_user-api.yaml
+++ b/src/main/resources/openapi/pay-my-buddy_user-api.yaml
@@ -53,12 +53,15 @@ components:
       properties:
         username:
           type: string
+          minLength: 1
           description: "the username of the user"
         email:
           type: string
+          minLength: 1
           description: "the mail of the user"
         password:
           type: string
+          minLength: 1
           description: "the password of the user"
         role:
           type: string
