--- a/src/test/resources/db/changelog/db.changelog-test.yaml
+++ b/src/test/resources/db/changelog/db.changelog-test.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/changelog-test-2025-06-27-create-user-and-transaction-tables.sql
       context: test
+  - include:
+      file: db/changelog/changelog-test-2025-09-05-modify-user-table-with-column-system-account.sql
+      context: test
