Fix(PMB-24): fixing transaction api and user api

--- a/src/main/resources/openapi/pay-my-buddy-transaction-api.yaml
+++ b/src/main/resources/openapi/pay-my-buddy-transaction-api.yaml
@@ -98,10 +98,17 @@ components:
   schemas:
     Transfer:
       type: object
+      required:
+        - amount
+        - friendName
       properties:
         friendName:
           type: string
+          description: "the name of the friend"
         description:
           type: string
         amount:
           type: string
+          minLength: 1
+          pattern: '^\S+$'
+          description: "Transfert amount is mandatory and must be a positive number"
